image to img. to fix image not showing

--- a/src/styles/Image.css
+++ b/src/styles/Image.css
@@ -1,4 +1,4 @@
-image{
+img{
     z-index: 2; 
     border: 2px solid red;
     height: 100%;
